# odoo

./: .eslintrc.json  .git-blame-ignore-revs  .gitignore  .mailmap  .prettierignore  COPYRIGHT  MANIFEST.in  README.md  TODO.txt  TRIGGERS  b64img_record_count.py  b64img_to_attachment.py  checkcheck.py  cla-stats.txt  completer.hist  conftest.py  copy_db.sh  et --hard  extract_l10n.py  home  more.txt  ocli  odoo-bin  odoo.py  polyphia  pyproject.toml  requirements.txt  reset_db.sh  reset_project_version.sh  rfid.py  rfid_tags.txt  select mrp from sale_order_line  settings  setup.cfg  setup.py  shell_script_convert_b64.py  taxes.csv  test-uninstalls.py  test_migration.sh  test_script.py  (+1 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: node.js.yml
.husky/: pre-commit  pre-push
.tx/: config
CustomAddons/Login/: demo.py  index.html
CustomAddons/academy/: __manifest__.py
CustomAddons/openacademy/: __manifest__.py  wizard.py
addons/: random.txt
addons/account/: __init__.py  __manifest__.py  __openerp__.py  account.py  account_invoice.py  res_currency.py
addons/account2/: __manifest__.py
addons/account_abracadabra/: __manifest__.py
addons/account_accountant/: __manifest__.py  __openerp__.py
addons/account_ai/: __manifest__.py
addons/account_analytic/: __manifest__.py
addons/account_analytic_analysis/: account_analytic_analysis_view.xml
addons/account_analytic_default/: account_analytic_default.py
addons/account_analytic_default_hr_expense/: __manifest__.py
addons/account_analytic_default_purchase/: __manifest__.py
addons/account_asset/: account_asset.py
addons/account_bank_statement_import/: account_bank_statement_import.py
addons/account_budget/: account_budget_view.xml
addons/account_check_printing/: __init__.py  __manifest__.py  account_payment.py
addons/account_check_writing/: __openerp__.py  account_check_writing_report.xml
addons/account_debit_note/: __manifest__.py
addons/account_dual_lang/: __manifest__.py
addons/account_edi/: __manifest__.py
addons/account_edi_facturx/: __manifest__.py
addons/account_edi_peppol/: __manifest__.py
addons/account_edi_proxy_client/: __manifest__.py
addons/account_edi_ubl/: __manifest__.py
addons/account_edi_ubl_bis3/: __manifest__.py
addons/account_edi_ubl_cii/: __init__.py  __manifest__.py  const.py
addons/account_edi_ubl_peppol/: __manifest__.py
addons/account_fiscal_pos/: __manifest__.py
addons/account_fleet/: __manifest__.py
addons/account_invoice/: __manifest__.py
addons/account_invoice_import/: __manifest__.py
addons/account_invoice_import_ubl/: __manifest__.py
addons/account_invoicing_factoring/: __manifest__.py
addons/account_lock/: __manifest__.py
addons/account_payment/: __manifest__.py
addons/account_peppol/: __init__.py  __manifest__.py  consts.py
addons/account_peppol_invoice_response/: __manifest__.py
addons/account_qr_code_sepa/: __manifest__.py
addons/account_reports_followup/: account_followup_view.xml
addons/account_tax_lines/: __manifest__.py
addons/account_tax_python/: __manifest__.py
addons/account_test/: __manifest__.py  account_test_view.xml
addons/account_voucher/: voucher_sales_purchase_view.xml
addons/activity_graph/: __manifest__.py
addons/address_autocomplete/: __manifest__.py
addons/adyen_platforms/: __manifest__.py  util.py
addons/analytic/: __manifest__.py
addons/anonymization/: anonymization.py
addons/association/: __manifest__.py
addons/attachment_indexation/: __manifest__.py
addons/auth_ldap/: __manifest__.py
addons/auth_oauth/: __init__.py  __manifest__.py
addons/auth_passkey/: __manifest__.py
addons/auth_passkey_portal/: __manifest__.py
addons/auth_passkey_restrict_password/: __manifest__.py
addons/auth_password_policy/: __manifest__.py
addons/auth_password_policy_portal/: __manifest__.py  controllers.py
addons/auth_password_policy_signup/: __manifest__.py  controllers.py
addons/auth_signup/: __manifest__.py
addons/auth_timeout/: __manifest__.py
addons/auth_totp/: __manifest__.py
addons/auth_totp_hr/: __manifest__.py
addons/auth_totp_portal/: __manifest__.py
addons/auth_webauthn/: __manifest__.py
addons/barcodes/: __init__.py  __manifest__.py  barcodes_view.xml
addons/barcodes_gs1_nomenclature/: __manifest__.py
addons/base_action_rule/: base_action_rule.py  base_action_rule_view.xml
addons/base_address_city/: __manifest__.py
addons/base_address_extended/: __init__.py  __manifest__.py
addons/base_automation/: __manifest__.py
addons/base_geolocalize/: __manifest__.py
addons/base_iban/: __manifest__.py
addons/base_import/: __manifest__.py  controllers.py  models.py
addons/base_import_module/: __manifest__.py
addons/base_onboarding/: __manifest__.py
addons/base_partner_tracker/: __manifest__.py
addons/base_setup/: __manifest__.py
addons/base_sparse_field/: __manifest__.py
addons/base_vat/: __manifest__.py
addons/board/: __manifest__.py
addons/book_qr_code_scan/: __manifest__.py
addons/bus/: __manifest__.py  websocket.py
addons/business_card_scanner/: __manifest__.py
addons/calendar/: __manifest__.py  calendar.py  calendar_view.xml  contacts.py
addons/calendar_bis/: __manifest__.py
addons/calendar_sms/: __manifest__.py
addons/chrome_printing/: __manifest__.py  chrome_service.sh
addons/cloud_storage/: __manifest__.py
addons/cloud_storage_azure/: __init__.py  (+1 more)
community/: pyproject.toml
debian/: control  copyright  odoo-nginx.config  odoo-nginx.install  odoo-nginx.postinst  odoo-nginx.templates  odoo.conf  rules
doc/: conf.py  python3.rst
estate/: __manifest__.py
odoo/: __init__.py  _framework.py  api.py  domain.py  exceptions.py  fields.py  http.py  import_xml.rng  loglevels.py  models.py  netsvc.py  release.py  sql_db.py  triple.py  uninstall.py
openerp/: api.py  fields.py  http.py  import_xml.rng  models.py  sql_db.py
setup/: install-deb-dependecies.pl  odoo-wsgi.example.py  package.dfdebian  package.dffedora  package.py  pep517_odoo.py  requirements-check.py  requirements-compare.py
test-addons/: pyproject.toml
(+33447 files in other folders)
