[build-system]
requires = ["setuptools>=41"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-community"
version = "1.0"  # not used
description = "Odoo Community Addons"
authors = [
    {name = "Odoo S.A.", email = "info@odoo.com"}
]
keywords = ["odoo", "framework", "addons"]
dependencies = [
    'odoo',
]
