[build-system]
requires = ["setuptools>=41"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-test-addons"
version = "1.0"  # not used
description = "Odoo Test Addons"
authors = [
    {name = "Odoo S.A.", email = "info@odoo.com"}
]
keywords = ["odoo", "framework", "addons"]
dependencies = [
    'odoo',
    'odoo-community',
]
